--- a/Smartphone-sales-manager/src/Smartphone_sales_management/UI/Component/PhieuNhap/PanelAddSanPhamPhieuNhap.form
+++ b/Smartphone-sales-manager/src/Smartphone_sales_management/UI/Component/PhieuNhap/PanelAddSanPhamPhieuNhap.form
@@ -51,7 +51,7 @@
                                   <Component id="cbbSanPham" max="32767" attributes="0"/>
                                   <Component id="txtGiaNhap" min="-2" pref="167" max="-2" attributes="0"/>
                               </Group>
-                              <Component id="jSpinner1" alignment="0" min="-2" max="-2" attributes="0"/>
+                              <Component id="jSoluong" alignment="0" min="-2" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace min="-2" pref="2" max="-2" attributes="0"/>
                           <Component id="btnAddSanPham" min="-2" max="-2" attributes="0"/>
@@ -86,7 +86,7 @@
                   <EmptySpace min="-2" pref="35" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="jLabel4" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="jSpinner1" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="jSoluong" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Component id="btnAdd" min="-2" pref="34" max="-2" attributes="0"/>
@@ -120,7 +120,7 @@
             <Property name="text" type="java.lang.String" value="S&#x1ed1; L&#x1b0;&#x1ee3;ng: "/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JSpinner" name="jSpinner1">
+        <Component class="javax.swing.JSpinner" name="jSoluong">
         </Component>
         <Component class="javax.swing.JTextField" name="txtGiaNhap">
         </Component>
@@ -148,6 +148,9 @@
             </Property>
             <Property name="text" type="java.lang.String" value="Th&#xea;m V&#xe0;o"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnAddActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel2">
           <Properties>
