--- a/Smartphone-sales-manager/src/Smartphone_sales_management/UI/Component/DonHangComponent/MainContentDonHang.form
+++ b/Smartphone-sales-manager/src/Smartphone_sales_management/UI/Component/DonHangComponent/MainContentDonHang.form
@@ -78,8 +78,8 @@
                           <EmptySpace min="-2" pref="40" max="-2" attributes="0"/>
                       </Group>
                       <Group type="102" attributes="0">
-                          <Component id="jScrollPane1" max="32767" attributes="0"/>
-                          <EmptySpace min="20" pref="20" max="-2" attributes="0"/>
+                          <Component id="jScrollPane1" min="-2" pref="989" max="-2" attributes="0"/>
+                          <EmptySpace max="32767" attributes="0"/>
                       </Group>
                   </Group>
               </Group>
@@ -179,6 +179,8 @@
                 </LineBorder>
               </Border>
             </Property>
+            <Property name="horizontalScrollBarPolicy" type="int" value="32"/>
+            <Property name="autoscrolls" type="boolean" value="true"/>
           </Properties>
 
           <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
